--- a/TeLoVendo/ficha.html
+++ b/TeLoVendo/ficha.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Te lo Vendo - Ficha de Producto</title>
   <link rel="stylesheet" href="css/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <header class="header">
     <div class="header__contenedor">
@@ -16,12 +18,14 @@
       <nav class="nav">
         <ul class="nav__lista">
           <li><a href="index.html" class="nav__link">Inicio</a></li>
-          <li><a href="catalogo.html" class="nav__link">Catálogo</a></li>
+          <li><a href="catalogo.html" class="nav__link nav__link--activo">Catálogo</a></li>
           <li><a href="acerca.html" class="nav__link">Acerca del Proyecto</a></li>
+          <li><a href="contacto.html" class="nav__link">Contacto</a></li>
         </ul>
       </nav>
     </div>
   </header>
+
 
   <main class="main">
     <section class="ficha">
@@ -32,7 +36,8 @@
 
         <div class="ficha__detalle">
           <p class="ficha__descripcion">
-            Pulsera tejida a mano con hilo de algodón reciclado. Ideal para regalar o complementar tu look diario. Diseño único hecho por jóvenes emprendedores.
+            Pulsera tejida a mano con hilo de algodón reciclado. Ideal para regalar o complementar tu look diario.
+            Diseño único hecho por jóvenes emprendedores.
           </p>
 
           <ul class="ficha__caracteristicas">
@@ -58,4 +63,5 @@
 
   <script src="js/main.js"></script>
 </body>
+
 </html>
