--- a/TeLoVendo/acerca.html
+++ b/TeLoVendo/acerca.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Te lo Vendo - Acerca del Proyecto</title>
   <link rel="stylesheet" href="css/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <header class="header">
     <div class="header__contenedor">
@@ -18,10 +20,12 @@
           <li><a href="index.html" class="nav__link">Inicio</a></li>
           <li><a href="catalogo.html" class="nav__link">Catálogo</a></li>
           <li><a href="acerca.html" class="nav__link nav__link--activo">Acerca del Proyecto</a></li>
+          <li><a href="contacto.html" class="nav__link">Contacto</a></li>
         </ul>
       </nav>
     </div>
   </header>
+
 
   <main class="main">
     <section class="acerca">
@@ -30,7 +34,9 @@
       <div class="acerca__bloque">
         <h3 class="acerca__subtitulo">Objetivos</h3>
         <p class="acerca__texto">
-          El objetivo principal de “Te lo Vendo” es brindar un espacio digital a jóvenes emprendedores para que puedan exhibir y vender sus productos en línea, fomentando el comercio justo, local y sustentable. Esta página es el punto de entrada al sistema que permitirá escalar su idea y conectar con más personas.
+          El objetivo principal de “Te lo Vendo” es brindar un espacio digital a jóvenes emprendedores para que puedan
+          exhibir y vender sus productos en línea, fomentando el comercio justo, local y sustentable. Esta página es el
+          punto de entrada al sistema que permitirá escalar su idea y conectar con más personas.
         </p>
       </div>
 
@@ -51,4 +57,5 @@
     </div>
   </footer>
 </body>
+
 </html>
