--- a/TeLoVendo/catalogo.html
+++ b/TeLoVendo/catalogo.html
@@ -12,18 +12,20 @@
 </head>
 
 <body>
-    <header class="header">
-        <div class="header__contenedor">
-            <h1 class="header__titulo">Te lo Vendo</h1>
-            <nav class="nav">
-                <ul class="nav__lista">
-                    <li><a href="index.html" class="nav__link">Inicio</a></li>
-                    <li><a href="catalogo.html" class="nav__link nav__link--activo">Catálogo</a></li>
-                    <li><a href="acerca.html" class="nav__link">Acerca del Proyecto</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+<header class="header">
+  <div class="header__contenedor">
+    <h1 class="header__titulo">Te lo Vendo</h1>
+    <nav class="nav">
+      <ul class="nav__lista">
+        <li><a href="index.html" class="nav__link">Inicio</a></li>
+        <li><a href="catalogo.html" class="nav__link nav__link--activo">Catálogo</a></li>
+        <li><a href="acerca.html" class="nav__link">Acerca del Proyecto</a></li>
+        <li><a href="contacto.html" class="nav__link">Contacto</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
+
 
     <main class="main">
         <section class="catalogo">
